// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacing component given a valid default theme is provided when a "margin" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-9 NatDSSpacing-root-10"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginBottom" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-13 NatDSSpacing-root-14"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginLeft" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-15 NatDSSpacing-root-16"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginRight" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-17 NatDSSpacing-root-18"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginTop" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-19 NatDSSpacing-root-20"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginX" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-21 NatDSSpacing-root-22"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "marginY" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-23 NatDSSpacing-root-24"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "padding" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-11 NatDSSpacing-root-12"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingBottom" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-25 NatDSSpacing-root-26"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingLeft" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-27 NatDSSpacing-root-28"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingRight" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-29 NatDSSpacing-root-30"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingTop" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-31 NatDSSpacing-root-32"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingX" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-33 NatDSSpacing-root-34"
/>
`;

exports[`Spacing component given a valid default theme is provided when a "paddingY" prop is provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-35 NatDSSpacing-root-36"
/>
`;

exports[`Spacing component given a valid default theme is provided when a \`div\` is provided as component should render correctly 1`] = `
<div
  className="NatDSSpacing-root-5 NatDSSpacing-root-6"
/>
`;

exports[`Spacing component given a valid default theme is provided when a \`span\` is provided as a component should render correctly 1`] = `
<span
  className="NatDSSpacing-root-7 NatDSSpacing-root-8"
/>
`;

exports[`Spacing component given a valid default theme is provided when no props are provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-3 NatDSSpacing-root-4"
/>
`;

exports[`Spacing component given no default theme is provided when no props are provided should render correctly 1`] = `
<div
  className="NatDSSpacing-root-1 NatDSSpacing-root-2"
/>
`;
